Scrollbar to indicate scrollability with daily weather, fixed name not updating properly

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -28,8 +28,17 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: auto;
-  overflow-y: scroll;
-  scrollbar-width: none;
+  overflow-x: scroll;
+  scrollbar-width: thin; /* Use for thin scrollbars */
+}
+
+.weatherTable::-webkit-scrollbar {
+  height: 8px;
+}
+
+.weatherTable::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.5); /* Light gray */
+  border-radius: 10px;
 }
 
 .weather-icon {
@@ -117,8 +126,8 @@ body {
   position: relative !important;
   margin-top: 24px;
   margin-bottom: 24px;
-  width: 300px !important;
-  height: 300px !important;
+  width: 320px !important;
+  height: 320px !important;
 }
 
 .location-container {
